You can get apiToken, but request to api server doesnt work well.

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-  <button id="btn">Run</button>
+  <button id="like">いいね</button>
+  <button id="unlike">いいね取り消し</button>
+  <button id="bookmark">ブックマーク</button>
+  <button id="unbookmark">ブックマーク取り消し</button>
+  <button id="archive">アーカイブ</button>
+  <button id="unarchive">アーカイブ取り消し</button>
   <script src="popup.js"></script>
 </body>
 </html>
