--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <div id='msg'></div>
+  <button id="test">test</button>
   <button id="like">いいね</button>
   <button id="unlike">いいね取り消し</button>
   <button id="bookmark">ブックマーク</button>
