--- a/popup.html
+++ b/popup.html
@@ -42,36 +42,59 @@
 
 <div class="container-fluid mt-2">
 
-  <p class="text-center my-2 py-2 rounded shadow" style="background-color: #007bff; color: white;">Super Tech Blog Management</p>
-
-  <div class="w-100">
-    <p id='error_msg' class="text-center text-extra-small"></p>
+  <!--タイトル-->
+  <div class="text-center mt-1 py-1 rounded shadow" style="background-color: #007bff; color: white;">
+    Super Tech Blog Management
+  </div>
+  <!--ユーザネーム-->
+  <div class="d-flex align-items-center justify-content-center">
+    <div class="text-center mt-1 py-1 rounded shadow text-extra-small w-75" style="background-color: #aaaaaa; color: rgb(0, 0, 0);" id="userName">Not Logged In</div>
   </div>
 
-  <div class="w-100">
-    <p id='success_msg' class="text-center text-extra-small"></p>
+  <!--エラーメッセージ-->
+  <div class="w-100 mt-1">
+    <div id='error_msg' class="text-center text-extra-small"></div>
   </div>
 
-  <div class="d-flex flex-wrap justify-content-around m-4">
-    <div id="unlike" class="icon-img">
-        <img src="images/like.png" alt="Like" class="img-fluid">
-    </div>
-    <div id="like" class="icon-img">
-        <img src="images/unlike.png" alt="Unlike" class="img-fluid">
-    </div>
-    <div id="unbookmark" class="icon-img">
-        <img src="images/bookmark.png" alt="Bookmark" class="img-fluid">
-    </div>
-    <div id="bookmark" class="icon-img">
-        <img src="images/unbookmark.png" alt="Unbookmark" class="img-fluid">
-    </div>
-    <div id="unarchive" class="icon-img">
-        <img src="images/archive.png" alt="Archive" class="img-fluid">
-    </div>
-    <div id="archive" class="icon-img">
-        <img src="images/unarchive.png" alt="Unarchive" class="img-fluid">
+  <!--成功メッセージ-->
+  <div class="w-100 mt-1">
+    <div id='success_msg' class="text-center text-extra-small"></div>
+  </div>
+
+  <!--ログインしている時-->
+  <div id="isLoggedIn">
+    <!--いいね（ブックマーク、アーカイブ）の画像-->
+    <div class="d-flex flex-wrap justify-content-around m-4">
+      <div id="unlike" class="icon-img">
+          <img src="images/like.png" alt="Like" class="img-fluid">
+      </div>
+      <div id="like" class="icon-img">
+          <img src="images/unlike.png" alt="Unlike" class="img-fluid">
+      </div>
+      <div id="unbookmark" class="icon-img">
+          <img src="images/bookmark.png" alt="Bookmark" class="img-fluid">
+      </div>
+      <div id="bookmark" class="icon-img">
+          <img src="images/unbookmark.png" alt="Unbookmark" class="img-fluid">
+      </div>
+      <div id="unarchive" class="icon-img">
+          <img src="images/archive.png" alt="Archive" class="img-fluid">
+      </div>
+      <div id="archive" class="icon-img">
+          <img src="images/unarchive.png" alt="Unarchive" class="img-fluid">
+      </div>
     </div>
   </div>
+  
+  <!--ログインしていない時-->
+  <div id="notIsLoggedIn">
+      <!--ログインURL-->
+      <div class="text-center mt-1 py-1">
+        ログインは<a href="http://techblog.shiroatohiro.com/login">こちら</a>から。
+      </div>
+  </div>
+
+
 </div>
 
 <div id="test">
