You can get user info from api. Error msg and success msg can show up. 2

--- a/popup.html
+++ b/popup.html
@@ -64,7 +64,7 @@
   <!--ログインしている時-->
   <div id="isLoggedIn">
     <!--いいね（ブックマーク、アーカイブ）の画像-->
-    <div class="d-flex flex-wrap justify-content-around m-4">
+    <div id="allButtons" class="d-flex flex-wrap justify-content-around m-4">
       <div id="unlike" class="icon-img">
           <img src="images/like.png" alt="Like" class="img-fluid">
       </div>
