like, bookmark, archive icons dont show up when origin does not match any author.

--- a/popup.html
+++ b/popup.html
@@ -44,7 +44,7 @@
 
   <!--タイトル-->
   <div class="text-center mt-1 py-1 rounded shadow" style="background-color: #007bff; color: white;">
-    Super Tech Blog Management
+    Super Tech-Blog Management
   </div>
   <!--ユーザネーム-->
   <div class="d-flex align-items-center justify-content-center">
@@ -64,24 +64,26 @@
   <!--ログインしている時-->
   <div id="isLoggedIn">
     <!--いいね（ブックマーク、アーカイブ）の画像-->
-    <div id="allButtons" class="d-flex flex-wrap justify-content-around m-4">
-      <div id="unlike" class="icon-img">
-          <img src="images/like.png" alt="Like" class="img-fluid">
-      </div>
-      <div id="like" class="icon-img">
-          <img src="images/unlike.png" alt="Unlike" class="img-fluid">
-      </div>
-      <div id="unbookmark" class="icon-img">
-          <img src="images/bookmark.png" alt="Bookmark" class="img-fluid">
-      </div>
-      <div id="bookmark" class="icon-img">
-          <img src="images/unbookmark.png" alt="Unbookmark" class="img-fluid">
-      </div>
-      <div id="unarchive" class="icon-img">
-          <img src="images/archive.png" alt="Archive" class="img-fluid">
-      </div>
-      <div id="archive" class="icon-img">
-          <img src="images/unarchive.png" alt="Unarchive" class="img-fluid">
+    <div id="allButtons">
+      <div class="d-flex flex-wrap justify-content-around m-4">
+        <div id="unlike" class="icon-img">
+            <img src="images/like.png" alt="Like" class="img-fluid">
+        </div>
+        <div id="like" class="icon-img">
+            <img src="images/unlike.png" alt="Unlike" class="img-fluid">
+        </div>
+        <div id="unbookmark" class="icon-img">
+            <img src="images/bookmark.png" alt="Bookmark" class="img-fluid">
+        </div>
+        <div id="bookmark" class="icon-img">
+            <img src="images/unbookmark.png" alt="Unbookmark" class="img-fluid">
+        </div>
+        <div id="unarchive" class="icon-img">
+            <img src="images/archive.png" alt="Archive" class="img-fluid">
+        </div>
+        <div id="archive" class="icon-img">
+            <img src="images/unarchive.png" alt="Unarchive" class="img-fluid">
+        </div>
       </div>
     </div>
   </div>
