change https to http.

--- a/popup.html
+++ b/popup.html
@@ -120,7 +120,7 @@
             </div>
             <!--サインアップはアプリから行う。-->
             <div class="text-center mt-2">
-                登録は<a href="http://techblog.shiroatohiro.com/register" target="_blank">こちら</a>から。
+                登録は<a href="https://techblog.shiroatohiro.com/register" target="_blank">こちら</a>から。
             </div>
         </div>
       </div>
